<resources>
    <string name="app_name">NavegaciónJetpack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="login">Ingresar</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="wellcome">Bienvenido</string>
    <string name="start">Iniciar</string>
    <string name="switchuser">Cambiar usuario</string>
    <string name="throw_coin"> Lanzar moneda</string>
    <string name="youwin">Ganaste</string>
    <string name="youlose">Perdiste</string>
    <string name="score">Puntuación</string>
    <string name="resing">Resignarse</string>

</resources>